<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.com.userede.erede</groupId>
  <artifactId>erede</artifactId>
  <version>1.0.0</version>
  <name>erede</name>
  <url>http://maven.apache.org</url>



	<properties>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>15</java.version>		
	</properties>
	
  <build>
    <plugins>

		<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
        	<artifactId>maven-clean-plugin</artifactId>
            <version>3.1.0</version>
		</plugin>
                
                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
        	<artifactId>maven-resources-plugin</artifactId>
            <version>3.1.0</version>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<configuration>
				<release>${java.version}</release>
				<encoding>UTF-8</encoding>
				<compilerArgs>
					--enable-preview
					<arg>-XDignore.symbol.file</arg>
                </compilerArgs>
			</configuration>
		</plugin>      
    </plugins>
  </build>
  <packaging>jar</packaging>



  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.12</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
    </dependency>
  </dependencies>
</project>
